# srcml_identifier_getter_tool

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: getter-app.yml
scripts/: Makefile  balanced_select.py  git_clone.cpp  run_grab_identifiers.py  run_srcml.py  split_and_filter.py
src/: CMakeLists.txt  get_all_identifiers.cpp  get_all_identifiers.hpp
